--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 body {
+  background: rgb(223, 30, 30);
+  background: linear-gradient(90deg, rgb(198, 208, 250) 0%, rgb(151, 157, 252) 100%);
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
